-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: hs25
-
Component/s: infrastructure
-
b53
-
generic
-
generic
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8026081 | 8 | Christian Thalinger | P4 | Resolved | Fixed | b111 |
| JDK-8199967 | openjdk7u | Christian Thalinger | P4 | Resolved | Fixed | master |
Some small fixes so we can enable -Wunused-value.
- backported by
-
JDK-8026081 clang: remove -Wno-unused-value
-
- Resolved
-
-
JDK-8199967 clang: remove -Wno-unused-value
-
- Resolved
-
- duplicates
-
JDK-8024159 optimized build fails: /defaultMethods.cpp:1321:13: error: ‘bool covariant_return_type(BasicType, BasicType)’ defined but not used
-
- Closed
-
- links to