8025613: clang: remove -Wno-unused-value

Reviewed-by: iveresov