hotspot/src/share/vm/classfile/defaultMethods.cpp
@@ -977,7 +977,7 @@ Method* DefaultMethods::find_super_default(
   return target;
 }
 
-#ifndef PRODUCT
+#ifdef ASSERT
 // Return true is broad type is a covariant return of narrow type
 static bool covariant_return_type(BasicType narrow, BasicType broad) {
   if (narrow == broad) {
@@ -988,7 +988,7 @@ static bool covariant_return_type(BasicType narrow, BasicType broad) {
   }
   return false;
 }
-#endif // ndef PRODUCT
+#endif
 
 static int assemble_redirect(
     BytecodeConstantPool* cp, BytecodeBuffer* buffer,
@@ -1281,4 +1281,3 @@ static void merge_in_new_methods(InstanceKlass* klass,
     MetadataFactory::free_array(cld, original_ordering);
   }
 }
-
